--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="refresh" content="0; url=birthday.html">
   <title>The Luckiest Day 💘</title>
   <link rel="stylesheet" href="style.css">
 </head>
@@ -26,3 +27,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
