--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </p>
 
     <div class="photo-hover">
-      <img src="images/pic0.jpeg" alt="Her">
+      <img src="pic0.jpeg">
     </div>
 
     <a href="intro.html" class="link-btn">This part Matters -></a>
@@ -24,3 +24,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
