--- a/intro.html
+++ b/intro.html
@@ -21,8 +21,9 @@
 
   <div id="hearts"></div>
 
-  <audio id="bgMusic" src="audio/HBD.mpeg" loop></audio>
+  <audio id="bgMusic" src="HBD.mpeg" loop></audio>
 
   <script src="script.js"></script>
 </body>
 </html>
+
