--- a/memories.html
+++ b/memories.html
@@ -16,30 +16,30 @@ I hope this continues forever and also hope we both get the crazy crazy future a
     </p>
 
     <div class="gallery">
-      <img src="images/pic1.jpeg">
-      <img src="images/pic2.jpeg">
-      <img src="images/pic3.jpeg">
-      <img src="images/pic4.jpeg">
-      <img src="images/pic5.jpeg">
-      <img src="images/pic6.jpeg">
-      <img src="images/pic7.jpeg">
-      <img src="images/pic8.jpeg">
-      <img src="images/pic9.jpeg">
-      <img src="images/pic10.jpeg">
-      <img src="images/pic11.jpeg">
-      <img src="images/pic12.jpeg">
-      <img src="images/pic13.jpeg">
-      <img src="images/pic14.jpeg">
-      <img src="images/pic15.jpeg">
-      <img src="images/pic16.jpeg">
-      <img src="images/pic17.jpeg">
-      <img src="images/pic18.jpeg">
-      <img src="images/pic19.jpeg">
-      <img src="images/pic20.jpeg">
-      <img src="images/pic21.jpeg">
-      <img src="images/pic22.jpeg">
-      <img src="images/pic23.jpeg">
-      <img src="images/pic24.jpeg">
+      <img src="pic1.jpeg">
+      <img src="pic2.jpeg">
+      <img src="pic3.jpeg">
+      <img src="pic4.jpeg">
+      <img src="pic5.jpeg">
+      <img src="pic6.jpeg">
+      <img src="pic7.jpeg">
+      <img src="pic8.jpeg">
+      <img src="pic9.jpeg">
+      <img src="pic10.jpeg">
+      <img src="pic11.jpeg">
+      <img src="pic12.jpeg">
+      <img src="pic13.jpeg">
+      <img src="pic14.jpeg">
+      <img src="pic15.jpeg">
+      <img src="pic16.jpeg">
+      <img src="pic17.jpeg">
+      <img src="pic18.jpeg">
+      <img src="pic19.jpeg">
+      <img src="pic20.jpeg">
+      <img src="pic21.jpeg">
+      <img src="pic22.jpeg">
+      <img src="pic23.jpeg">
+      <img src="pic24.jpeg">
     </div>
 
     <a href="message.html" class="link-btn">One last thing 💌</a>
@@ -47,9 +47,10 @@ I hope this continues forever and also hope we both get the crazy crazy future a
 <script src="script.js"></script>
 
   </div>
-<audio id="memoryMusic" src="audio/KMPH.mpeg" loop></audio>
+<audio id="memoryMusic" src="KMPH.mpeg" loop></audio>
 <script src="script.js"></script>
 
 
 </body>
 </html>
+
